--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   langflow_gigachat:
     container_name: langflow_gigachat
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile
     ports:
       - "7860:7860"
