--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,6 +3,6 @@ services:
     container_name: langflow_gigachat
     build:
       context: ..
-      dockerfile: Dockerfile
+      dockerfile: docker/components.Dockerfile
     ports:
       - "7860:7860"
