--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   langflow_gigachat:
     container_name: langflow_gigachat
     build:
-      context: ..
-      dockerfile: docker/components.Dockerfile
+      context: .
+      dockerfile: components.Dockerfile
     ports:
       - "7860:7860"
