update README.md and .env_example

--- a/.env_example
+++ b/.env_example
@@ -3,6 +3,7 @@ OPENAI_API_KEY=sk-...
 
 GIGACHAT_CREDENTIALS=YOUR_GIGACHAT_TOKEN
 # Доп. параметры для GigaChat (обычно значения по умолчанию подходят)
+# GIGACHAT_SCOPE=GIGACHAT_API_{CORP/PERS/B2B} (по умолчанию PERS)
 # GIGACHAT_BASE_URL=...
 # GIGACHAT_AUTH_URL=...
 # GIGACHAT_SCOPE=GIGACHAT_API_CORP
